# minimal-qt-project

./: CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp
macos/: AppIcon.icns  Info.plist.in
